--- a/index.html
+++ b/index.html
@@ -1,80 +1,48 @@
-.global-styles,
-.eapp-weather-weather-component {
-max-width: 614px !important;
-}
-
-
-.eapp-weather-forecast-item-icon,
-.eapp-weather-daily-item-icon
-{
-width: 120px;
-height: 114px;
-}
-
-.eapp-weather-detail-locationName {
-font-size: 20px;
-font-family:Arial;
-display: none;
-
-}
-.eapp-weather-detail-currentTemp {
-font-size: 60px;
-font-family: Arial;
-
-}
-
-.eapp-weather-detail-weatherName {
-font-size: 50px;
-font-family: Arial;
-}
-.eapp-weather-forecast-detail-component * {
-font-size: 30px;
-font-family: Arial;
-}
-.eapp-weather-forecast-item-date {
-font-size: 20px;
-font-family: Arial;
-}
-.eapp-weather-forecast-item-temp {
-font-size: 0px;
-font-family: Arial;
-}
-.eapp-weather-daily-item-date {
-font-size: 20px;
-font-family: Arial;
-display: none;
-}
-.eapp-weather-daily-item-day {
-font-size: 55px;
-font-family: Arial;
-}
-.eapp-weather-daily-item-max {
-font-size: 30px;
-font-family: Arial;
-}
-.eapp-weather-daily-item-min {
-font-size: 25px;
-font-family: Arial;
-}
-.eapp-weather-daily-item-component:nth-child(n+4) {
-display: none;
-}
-
-
-.eapp-weather-detail-iconBlock svg {
-  width: var(--es-weather-icon-size);
-  height: var(--es-weather-icon-size);
-  margin: calc(var(--es-weather-icon-size) / -6) 0;
-}
-.eapp-weather-daily-item-component:first-child,
-.eapp-weather-daily-item-component:nth-child(n +),
-.eapp-weather-detail-location {
-  display: none;
-}
-
-.global-styles,
-:root {
-  --es-weather-icon-size: 150px;
-}
-
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SOPFEU Widget</title>
+  <style>
+    #sopfeu-widget-container {
+      max-width: 400px;   /* largeur maximale du widget */
+      height: 350px;      /* hauteur du widget, modifie selon besoin */
+      margin: 0 auto;     /* centrer le widget */
+      overflow: hidden;   /* masque le débordement éventuel */
+      font-size: 18px;    /* <-- Ajoute cette ligne pour changer la taille du texte */
+    }
+    @media (max-width: 450px) {
+      #sopfeu-widget-container {
+        max-width: 100%;
+        height: 250px;
+        font-size: 16px;  /* <-- Taille du texte sur petits écrans */
+      }
+    }
+  </style>
+</head>
+<body>
+  <div data-sopfeu-lng="fr_CA" data-sopfeu-media="31" data-sopfeu-responsive="true" id="sopfeu-widget-container">
+    <span id="sopfeu-widget-loader"></span>
+  </div>
+  <script src="https://www.sopfeu.qc.ca/sopfeu-widget.js"></script>
+  <script>
+    function hideVoirSurLaCarteParent() {
+      var links = document.querySelectorAll('#sopfeu-widget-container a');
+      links.forEach(function(link) {
+        if (link.textContent.trim().startsWith('Voir sur la carte')) {
+          if (link.parentElement) {
+            link.parentElement.style.display = 'none';
+          }
+        }
+      });
+    }
+    let tries = 0;
+    let interval = setInterval(function() {
+      hideVoirSurLaCarteParent();
+      tries++;
+      if (tries > 10) clearInterval(interval);
+    }, 500);
+  </script>
+</body>
+</html>
