--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
   </style>
 </head>
 <body>
-  <div data-sopfeu-lng="fr_CA" data-sopfeu-media="31" data-sopfeu-responsive="true" id="sopfeu-widget-container">
-    <span id="sopfeu-widget-loader"></span>
-  </div>
-  <script src="https://www.sopfeu.qc.ca/sopfeu-widget.js"></script>
+  <div data-sopfeu-lng="fr_CA" data-sopfeu-media="17" data-sopfeu-responsive="true" id="sopfeu-widget-container"><span id="sopfeu-widget-loader"></span></div><script src="https://www.sopfeu.qc.ca/sopfeu-widget.js"></script>
   <script>
     function hideVoirSurLaCarteParent() {
       var links = document.querySelectorAll('#sopfeu-widget-container a');
